--- a/client/package.json
+++ b/client/package.json
@@ -1,22 +1,28 @@
 {
-  "name": "react-form",
+  "name": "client",
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "tsc && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.17",
+    "@reduxjs/toolkit": "^1.7.1",
     "axios": "^0.25.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^6.2.1"
+    "react-redux": "^7.2.6"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
+    "@types/react": "^17.0.33",
+    "@types/react-dom": "^17.0.10",
+    "@types/react-redux": "^7.1.22",
     "@vitejs/plugin-react": "^1.0.7",
+    "typescript": "^4.4.4",
     "vite": "^2.7.2"
   }
 }
