--- a/client/package.json
+++ b/client/package.json
@@ -8,9 +8,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.17",
+    "@mui/icons-material": "^5.3.1",
+    "@mui/material": "^5.4.0",
     "@reduxjs/toolkit": "^1.7.2",
     "next": "12.0.10",
     "react": "17.0.2",
